GameList: Add cover downloader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,9 @@ if(NOT ANDROID)
   if(NOT WIN32 AND USE_SDL2)
     find_package(SDL2 REQUIRED)
   endif()
+  if(NOT WIN32)
+    find_package(CURL REQUIRED)
+  endif()
   if(BUILD_QT_FRONTEND)
     find_package(Qt6 COMPONENTS Core Gui Widgets Network LinguistTools REQUIRED)
   endif()
@@ -129,9 +132,6 @@ if(USE_EVDEV)
 endif()
 if(ENABLE_CHEEVOS)
   message(STATUS "RetroAchievements support enabled")
-  if(NOT WIN32 AND NOT ANDROID)
-    find_package(CURL REQUIRED)
-  endif()
 endif()
 
 
